# Projetos-Pessoais-Iniciais

./: Gdp.py  funcoes.py
Controle de Entrada/: ControleDeEntrada.py  ControleDeEntradaTXT.py  ControledeEntradaWord.py
Gdp/: Gdp.py  ReadMe  ReadMe.md  funcoes.py
Gdp/Gdp 1.5.1/: Gdp.py  ReadMe.md  funcoes.py
Gerenciador De Estacionamento/: ReadMe.md  estacionamento.py
Gerenciador De Estacionamento/Gerenciador de Estacionamento 1.5/: ReadMe.md  estacionamento.py
Sistema de Login/: LoginSystem.py
Tkinter Projects/My Pass/: Readme.md  main.py
Tkinter Projects/Pomodoro Time Manager/: Readme.md  main.py
Tkinter Projects/be_wise/: b64_imgs.py  bewise.py  bw_funcoes.py  readme.md  txt_file.txt
Tkinter Projects/be_wise/project_settings/: pyproject.toml  requirements.txt
jogo_adivinhacao/: main.py
